--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "firebase": "^9.8.4",
+    "node-cron": "^3.0.2",
     "odoo-await": "^3.3.0",
     "pug": "^3.0.2"
   },
